# poker_ws

./: requirement_install.sh
devel/: .catkin  local_setup.sh  setup.sh
devel/include/interfaces/: MoveRobotAction.h  MoveRobotActionResult.h
devel/lib/pkgconfig/: control.pc  robot_description.pc
devel/lib/python3/dist-packages/interfaces/msg/: _MoveRobotAction.py  _MoveRobotActionGoal.py  _MoveRobotActionResult.py  _MoveRobotFeedback.py  _MoveRobotGoal.py  _MoveRobotResult.py
devel/share/common-lisp/ros/interfaces/msg/: MoveRobotActionFeedback.lisp  MoveRobotActionGoal.lisp  _package_MoveRobotActionFeedback.lisp  _package_MoveRobotFeedback.lisp  _package_MoveRobotGoal.lisp  _package_MoveRobotResult.lisp  interfaces-msg.asd
devel/share/control/cmake/: controlConfig.cmake
devel/share/gennodejs/ros/interfaces/msg/: MoveRobotActionFeedback.js  MoveRobotActionGoal.js  MoveRobotFeedback.js
devel/share/interfaces/cmake/: interfaces-msg-paths.cmake
devel/share/interfaces/msg/: MoveRobotGoal.msg  MoveRobotResult.msg
devel/share/robot_description/cmake/: robot_descriptionConfig.cmake
devel/share/roseus/ros/interfaces/: manifest.l
devel/share/roseus/ros/interfaces/msg/: MoveRobotActionFeedback.l  MoveRobotActionResult.l  MoveRobotGoal.l  MoveRobotResult.l
install/: setup.sh
install/include/interfaces/: MoveRobotActionFeedback.h  MoveRobotActionGoal.h  MoveRobotFeedback.h  MoveRobotGoal.h  MoveRobotResult.h
install/lib/pkgconfig/: control.pc
install/lib/python3/dist-packages/interfaces/msg/: _MoveRobotActionFeedback.py
install/share/common-lisp/ros/interfaces/msg/: MoveRobotAction.lisp  MoveRobotActionResult.lisp  MoveRobotFeedback.lisp  MoveRobotGoal.lisp  MoveRobotResult.lisp  _package.lisp  _package_MoveRobotAction.lisp  _package_MoveRobotActionGoal.lisp  _package_MoveRobotActionResult.lisp
install/share/control/: package.xml
install/share/gennodejs/ros/interfaces/msg/: MoveRobotAction.js  MoveRobotActionResult.js  MoveRobotGoal.js  MoveRobotResult.js  _index.js
install/share/robot_description/cmake/: robot_descriptionConfig.cmake
install/share/roseus/ros/interfaces/msg/: MoveRobotAction.l  MoveRobotActionGoal.l  MoveRobotFeedback.l
src/control/: CMakeLists.txt
src/control/config/: control.yaml  control_poker.yaml
src/control/launch/: controller.launch  controller_camera_attached.launch  poker_controller.launch
src/control/scripts/: mission_control.py  wheeler.py
src/detector/: CMakeLists.txt  package.xml
src/detector/scripts/: viewer.py
src/interfaces/: CMakeLists.txt  package.xml
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: empty_world.launch  indicator_light.launch  linear_motor.launch  linear_motor_with_camera.launch  on_off_light.launch  poker.launch  poker_world.launch  rbot_world.launch  robot.rviz  robot_rviz.launch  wheeler.launch  world_one.launch  world_two.launch
src/robot_description/models/domino_pieces/: model.config  model.sdf
src/robot_description/models/indicator_light/: model.config  model.sdf  model.urdf  model.urdf.erb
src/robot_description/models/linear_actuator/: model.sdf  model.sdf.erb  model.urdf  model.urdf.erb  modelGenerator.sh
src/robot_description/models/linear_actuator/STL/: arm.dae  arm.stl  base.dae  base.stl
src/robot_description/models/linear_actuator_with_camera/: launch_model.py  model.config  model.urdf  model.urdf.erb
src/robot_description/models/on_off_light/: model.urdf  model.urdf.erb
src/robot_description/models/poker/: model.urdf  model.urdf.erb
src/robot_description/models/poker/STL/: arm.stl
src/robot_description/models/wheeler/: model.urdf  model.urdf.erb
src/robot_description/models/wheeler/config/: model_pid.yaml
src/robot_description/src/: light_control_plugin.cc  light_on_off_plugin.cc
src/robot_description/worlds/: one.world  operation.world  two.world
